--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "peerDependencies": {
     "react": ">=16.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "warning": "4.0.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
