--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepublish": "npm run lib",
     "storybook": "start-storybook -p 6006",
     "build": "webpack",
+    "test": "jest --watchAll --coverage",
     "build:cjs": "cross-env NODE_ENV=production babel --config-file ./babel.config.js ./src --out-dir ./lib --ignore \"**/*.test.js\""
   },
   "files": [
@@ -52,6 +53,7 @@
     "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
     "flow-bin": "^0.95.1",
+    "jest": "^24.8.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-jss": "^8.6.1",
@@ -59,5 +61,20 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-node-externals": "^1.7.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "testMatch": [
+      "**/*.(spec|test).{js,jsx,ts,tsx}",
+      "**/__tests__/*.{js,jsx,ts,tsx}"
+    ],
+    "coverageReporters": [
+      "html"
+    ]
   }
 }
