--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lib": "npm run clean && npm run build:cjs",
     "clean": "rm -rf lib && mkdir lib",
-    "prepublish": "npm run lib",
+    "prepublishOnly": "npm run lib",
     "storybook": "start-storybook -p 6006",
     "build": "webpack",
     "test": "jest",
@@ -47,12 +47,12 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.1.3",
-    "@storybook/addon-knobs": "^5.1.3",
-    "@storybook/addon-links": "^5.1.3",
-    "@storybook/addons": "^5.1.3",
-    "@storybook/react": "^5.1.3",
-    "@storybook/theming": "^5.1.3",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
+    "@storybook/theming": "^5.1.9",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
     "flow-bin": "^0.95.1",
