--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib": "npm run clean && npm run build:cjs",
     "clean": "rm -rf lib && mkdir lib",
     "prepublishOnly": "npm run lib",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s .storybook/public",
     "storybook:build": "build-storybook -s .storybook/public -c .storybook -o build-storybook",
     "storybook:publish": "gh-pages -m 'Update storybook gh-pages' -d ./build-storybook",
     "build": "webpack",
