--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "jest",
     "flow": "flow",
     "build:cjs": "cross-env NODE_ENV=production babel --config-file ./babel.config.js ./src --out-dir ./lib --ignore \"**/*.test.js\"",
-    "postpublish": "npm run storybook:publish"
+    "postpublish": "npm run storybook:build && npm run storybook:publish"
   },
   "files": [
     "*.md",
