--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-easy-panzoom",
   "version": "0.6.0",
   "description": "Wrapper to enable pan and zoom for any React component",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "author": "mnogueron",
   "homepage": "https://mnogueron.github.io/react-easy-panzoom",
   "repository": {
